@@ -4,12 +4,6 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-
-# These are used for cross-compiling and for saving the configure script
-# from having to guess our platform (since we know it already)
-DEB_HOST_GNU_TYPE   ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
-DEB_BUILD_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
-
 DPKG_EXPORT_BUILDFLAGS = 1
 include /usr/share/dpkg/buildflags.mk
 
@@ -17,12 +11,10 @@ include /usr/share/dpkg/buildflags.mk
 	dh $@ --with autotools-dev
 
 override_dh_auto_configure:
-	cd amora-cli && autoreconf -f -i && ./configure --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) --prefix=/usr --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info CFLAGS="$(CFLAGS)" LDFLAGS="-Wl,-z,defs"
+	cd amora-cli && autoreconf -f -i
+	dh_auto_configure -D amora-cli
 	# Does qmake-qt4 support cross-compiling?
 	$(MAKE) amora-applet/Makefile
-
-override_dh_auto_build:
-	$(MAKE)
 
 override_dh_clean:
 	# Remove any amora-screenshot.png which usually result from testing
@@ -32,7 +24,7 @@ override_dh_clean:
 	dh_clean 
 
 override_dh_auto_install:
-	cd amora-cli; $(MAKE) DESTDIR=$(CURDIR)/debian/amora-cli install
+	dh_auto_install -D amora-cli
 
 	# Remove installed .la file
-	rm -v $(CURDIR)/debian/amora-cli/usr/lib/libamora.la
+	rm -v $(CURDIR)/debian/*/usr/lib/*/libamora.la
