@@ -7,6 +7,7 @@ amora-server (1.2~svn+git2015.03.15-1) UNRELEASED; urgency=medium
   * Declare compliance with Debian Policy 3.9.6 (no other changes needed)
   * Switch debian/rules to dh v7 minimal style
     + Move amora-applet file installations to debian/amora-applet.install
+    + Use dh_auto_{configure,build,install} instead of configure and make.
   * Use autoreconf to regenerate potentially missing files for amora-cli.
     + Add build-dependency on autoconf.
 
